# light-the-torch

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  dodo.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  tox.ini
.github/: incorrect_pytorch_dists_issue_template.md  pip_latest_failure_issue_template.md  pip_latest_success_issue_template.md  pretend_publish_version.py
.github/actions/: setup-dev-env.yml
.github/actions/create-issue/: action.yml
.github/actions/publish-from-template/: action.yml
.github/actions/setup-dev-env/: action.yml  get_cache_path.py
.github/issue-templates/: linux-nightly-uninstallable.md  packages-out-of-sync.md  pip-latest-failure.md  pip-latest-success.md
.github/workflows/: check-available-pytorch-dists.yml  check-pytorch-package-indices.yml  docs.yml  install.yml  lint.yml  linux-nightly-install.yml  publish.yml  publishable.yml  release.yml  tests-pip-latest.yml  tests.yml
docs/: generate_requirements_rtd.py  requirements-rtd.txt
docs/source/: conf.py  index.rst  installation.rst
light_the_torch/: __init__.py  _cb.py  _cli.py  _compat.py  _packages.py  _patch.py  _utils.py  cli.py  compatibility.py  computation_backend.py
light_the_torch/_core/: __init__.py  common.py
light_the_torch/_patch/: __init__.py  cli.py  packages.py  patch.py  utils.py
light_the_torch/_pip/: __init__.py  common.py  extract.py  find.py
light_the_torch/cli/: __init__.py  commands.py
local-project-stubs/pep517-setuptools/: pyproject.toml  setup.cfg
ltt/: __init__.py  cli.py
ltt/_core/: find.py  resolve.py
scripts/: check_available_pytorch_dists.py  check_pytorch_package_indices.py  collect_env.py
tests/: conftest.py  test_cli.py  test_computation_backend.py  test_smoke.py
tests/cli/: conftest.py  test_extract.py  test_find.py  test_global.py  test_install.py  utils.py
tests/core/: test_common.py  test_find.py  test_resolve.py
tests/unit/: conftest.py  test_computation_backend.py  test_smoke.py
tests/unit/_pip/: test_common.py  test_extract.py  test_find.py
tests/unit/pip/: test_common.py  test_extract.py  test_find.py
