[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See link below for available options
# https://github.com/pypa/setuptools_scm/#configuration-parameters

write_to = "light_the_torch/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-timestamp"

[tool.isort]
# See link below for available options
# https://github.com/timothycrosley/isort/wiki/isort-Settings#full-reference-of-isort-settings

skip = [
  ".git",
  ".venv",
  ".eggs",
  ".mypy_cache",
  ".pytest_cache",
  ".tox",
  "__pycache__",
  "light_the_torch/__init__.py",
]
line_length = 88
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true

known_third_party = ["pytest", "setuptools_scm", "toml"]
known_first_party = ["light_the_torch"]

[tool.black]
# See link below for available options
# https://github.com/psf/black#configuration-format

line-length = 88
target-version = ['py36', 'py37', 'py38']
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | __pycache__
)/
'''
