[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "light_the_torch"
description = "Install PyTorch distributions with computation backend auto-detection"
readme = "README.md"
keywords = [
  "pytorch",
  "cuda",
  "pip",
  "install",
]
authors = [
    { name = "Philip Meier", email = "github.pmeier@posteo.de" },
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]
requires-python = ">= 3.9"
dependencies = [
    "pip >=22.3, <24.4",
]
dynamic = ["version"]

[project.urls]
Tracker = "https://github.com/pmeier/light-the-torch/issues"
Source = "https://github.com/pmeier/light-the-torch"

[project.scripts]
ltt = "light_the_torch._cli:main"

[tool.setuptools.packages.find]
include = [
    "light_the_torch",
]

[tool.setuptools_scm]
# See link below for available options
# https://github.com/pypa/setuptools_scm/#configuration-parameters

write_to = "light_the_torch/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-timestamp"

[tool.black]
# See link below for available options
# https://github.com/psf/black#configuration-format

line-length = 88
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | __pycache__
)/
'''
