[metadata]
name = ltt
platforms = any
description = Install PyTorch distributions with autodetected computation backend
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = pytorch, cuda, pip, install
url = https://github.com/pmeier/light-the-torch
author = Philip Meier
author-email = github.pmeier@posteo.de
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed
project_urls =
    Source = https://github.com/pmeier/light-the-torch
    Tracker = https://github.com/pmeier/light-the-torch/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pip>=20.1

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    ltt=ltt.cli:main
