[metadata]
name = light_the_torch
platforms = any
description = Install PyTorch distributions with computation backend auto-detection
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
keywords = pytorch, cuda, pip, install
url = https://github.com/pmeier/light-the-torch
author = Philip Meier
author_email = github.pmeier@posteo.de
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Installation/Setup
    Topic :: Utilities
project_urls =
    Source = https://github.com/pmeier/light-the-torch
    Tracker = https://github.com/pmeier/light-the-torch/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    pip >=22.0, <22.2, != 22.0, != 22.0.1, != 22.0.2

[options.packages.find]
exclude =
    .github*
    scripts*
    tests*

[options.entry_points]
console_scripts =
    ltt=light_the_torch._cli:main
